--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,31 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: var(--black);
+  background: #F5F6F8;
+
+  font-family: var(--font-family);
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+
+  color: inherit;
 }
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --black: #3B434E;
+  --gray-light: #EBEBEB;
+  --white: white;
+  --primary: #7653FC;
+  --primary-hover: #6344DF;
+  --red: #FC836D;
+  --green: #1DC37E;
+  --green-light: #C8F8E4;
+  --font-family: 'Noto Sans KR', sans-serif;
 }
