--- a/Layout/Layout.module.css
+++ b/Layout/Layout.module.css
@@ -2,7 +2,7 @@
   display: grid;
 
   min-height: 100vh;
-  gap: 0 30px;
+  gap: 40px 30px;
   grid-template-columns: auto 230px minmax(320px, 1200px) auto;
   grid-template-rows: auto 1fr auto;
   grid-template-areas:
@@ -46,6 +46,10 @@
   }
 
   .sidebar {
-    display: none;
+    display: none !important;
+  }
+
+  .body {
+    padding: 15px;
   }
 }
