add Product components(input TextArea Search) Adaptive grid

--- a/components/Tag/Tag.module.css
+++ b/components/Tag/Tag.module.css
@@ -41,7 +41,7 @@
 
 .green {
   color: var(--green);
-  background: var(--gray-light);
+  background: var(--green-light);
 
   font-weight: bold;
 }
