Create form, refactor elements for react hook form and ref, error processing

--- a/components/Input/Input.module.css
+++ b/components/Input/Input.module.css
@@ -1,3 +1,7 @@
+.inputWrapper {
+  position: relative;
+}
+
 .input {
   padding: 7px 15px;
 
@@ -15,4 +19,16 @@
 
 .input::placeholder {
   color: var(--gray);
+}
+
+.error {
+  border: 1px solid var(--red);
+}
+
+.errorMessage {
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+
+  color: var(--red);
 }
