--- a/components/Rating/Rating.module.css
+++ b/components/Rating/Rating.module.css
@@ -1,3 +1,7 @@
+.ratingWrapper {
+  position: relative;
+}
+
 .filled svg {
   fill: var(--primary);
 }
@@ -8,4 +12,16 @@
 
 .editable {
   cursor: pointer;
+}
+
+.error svg {
+  stroke: var(--red);
+}
+
+.errorMessage {
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+
+  color: var(--red);
 }
