Add accessibility color and tab Menu on keyboard

--- a/Layout/Layout.module.css
+++ b/Layout/Layout.module.css
@@ -21,10 +21,30 @@
 
 .body {
   grid-area: body;
+
+  outline: none;
 }
 
 .footer {
   grid-area: footer;
+}
+
+.skipLink {
+  position: fixed;
+  top: 0;
+  left: 100px;
+
+  display: block;
+  overflow: hidden;
+
+  height: 0;
+
+  color: var(--white);
+  background: var(--primary);
+}
+
+.displayed {
+  height: auto;
 }
 
 @media (max-width: 860px) {
