--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -127,7 +127,7 @@
   margin-bottom: 20px;
   padding-left: 15px;
 
-  border-left: 2px solid var(--green);
+  border-left: 2px solid #1DC37E;
 }
 
 .disadvantages {
