Add accessibility Form on keyboard

--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -170,6 +170,14 @@
   padding: 30px;
 }
 
+.opened {
+  height: auto;
+}
+
+.closed {
+  height: 0;
+}
+
 @media screen and (max-width: 1320px) {
   .product {
     grid-template-columns: 70px 30px auto 40px auto 40px 1fr;
