Add accessibility for sort element

--- a/components/Sort/Sort.module.css
+++ b/components/Sort/Sort.module.css
@@ -4,17 +4,24 @@
   gap: 40px;
 }
 
-.sort span {
+.sort button {
   display: grid;
-  grid-template-columns: 20px 1fr;
-  gap: 8px;
 
   align-items: center;
 
   cursor: pointer;
+
+  border: none;
+  background: none;
+
+  font-family: var(--font-family);
+  font-size: 16px;
+  line-height: 22px;
+  grid-template-columns: 20px 1fr;
+  gap: 8px;
 }
 
-.sort span:not(.active) {
+.sort button:not(.active) {
   grid-template-columns: 1fr;
 }
 
