--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,15 @@ a {
   box-sizing: border-box;
 }
 
+.visuallyHidden {
+  position: absolute;
+
+  overflow: hidden;
+
+  width: 0;
+  height: 0;
+}
+
 :root {
   --black: #3B434E;
   --gray-light: #EBEBEB;
