--- a/Layout/Menu/Menu.module.css
+++ b/Layout/Menu/Menu.module.css
@@ -31,12 +31,13 @@
   margin-bottom: 10px;
   padding: 0;
 
+  cursor: pointer;
+
   text-transform: uppercase;
 
   color: var(--gray-dark);
 
   border: none;
-
   background: none;
 
   font-size: 12px;
